<resources>
    <string name="app_name">Niezbędnik Turystyczny</string>
    <string name="button_1">Pierwszy ekran</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation1_fragment_name">Wyszukaj</string>
    <string name="navigation2_fragment_name">Nawiguj</string>
    <string name="MASLevel">m n.p.m</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDYAOuyPGtX7hmCAJByCnvMpa3ymAfK2OU</string>


    <!--Strings related to issue activity-->
    <string name="danger_textView">Zagrożenia na trasie:</string>
    <string name="animals_button">Zwierzęta</string>
    <string name="avalanche_button">Lawina</string>
    <string name="landslide_button">Osuwisko</string>
    <string name="ice_button">Oblodzenie</string>
    <string name="rocks_button">Spadające kamienie</string>
    <string name="overhang_button">Nawis</string>

    <string name="pass_textView">Brak przejścia:</string>
    <string name="track_button">Uszkodzona trasa</string>
    <string name="tree_button">Powalone drzewo</string>
    <string name="bridge_button">Zerwany most</string>
    <string name="new_issue_title">Nowe wydarzenie</string>
    <string name="new_issue_content">Pojawiło się nowe wydarzenie. Dotknij aby sprawdzić.</string>
    <string name="event_confirmation">Czy potwierdzasz wystąpienie zdarzenia?</string>




    <!--Strings related to help activity-->
    <string name="blood_button">Krwotok</string>
    <string name="broken_button">Złamanie</string>
    <string name="frostbite_button">Odmrożenie</string>
    <string name="sting_button">Ukąszenie/Uczulenie</string>
    <string name="trap_button">Uwięzienie</string>
    <string name="unconscious_button">Nieprzytomność</string>
    <string name="new_help_title">Ktoś wzywa pomocy!</string>
    <string name="new_help_content">Ktoś potrzebuje pomocy. Dotknij aby sprawdzić.</string>
    <string name="help_confirmation">Czy nawigować do lokalizacji?</string>
    <string name="call_emergency">Zadzwoń po pomoc</string>
    <string name="text_emergency">Napisz po pomoc</string>
    <string name="help_textView">Wybierz problem:</string>




    <!--Strings related to achievement activity-->
    <string name="summer">Lato:</string>
    <string name="winter">Zima:</string>
    <string name="achievement_notification_title">"Gratulacje!"</string>
    <string name="achievement_notification_body">"Zdobyłeś nowy szczyt!"</string>
    <string name="status_text">Status:</string>
    <string name="hill_achieved">Zdobyty</string>
    <string name="hill_not_achieved">Niezdobyty</string>
    <string name="hills_achieved">%1$d/%2$d %3$.1f%%</string>




    <!--Strings to name buttons in map activity-->
    <string name="map_help_button">Pomoc</string>
    <string name="map_issue_button">Wydarzenie</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło (opcjonalnie)</string>
    <string name="action_sign_in">Zaloguj się lub zrejestruj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="action_sign_out">Wyloguj</string>
    <string name="error_invalid_email">Adres email jest niepoprawny</string>
    <string name="error_invalid_password">Hasło jest zbyt krótkie</string>
    <string name="error_incorrect_password">Hasło jest nieprawidłowe</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="resend_verification_email">Wyślij ponownie maila weryfikacyjnego</string>
    <string name="forgot_password">Zapomniałem hasła</string>
    <string name="register">Zarejestruj</string>
    <string name="sign_in">Zaloguj</string>
    <string name="password">Hasło</string>
    <string name="email_registration">Rejestracja maila</string>
    <string name="email">Email</string>
    <string name="confirm_password">Potwierdź hasło</string>

    <!-- Firestore Strings -->
    <string name="collection_users">Users</string>
    <string name="collection_chatrooms">Chatrooms</string>
    <string name="collection_chat_messages">Chat Messages</string>
    <string name="collection_chatroom_user_list">User List</string>
    <string name="collection_user_locations">User Locations</string>
    <string name="collection_events">Events</string>
    <string name="collection_help">Help Events</string>
    <string name="collection_hills">Hills</string>
    <string name="collection_user_hills">User Hills</string>
    <string name="collection_achieved_hills">Achieved Hills</string>

    <!-- Intent extras -->
    <string name="intent_chatroom">intent_chatroom</string>
    <string name="intent_user_list">intent_user_list</string>
    <string name="intent_user_locations">intent_user_locations</string>
    <string name="intent_location">intent_location</string>

    <!-- Service and Broadcasts -->
    <string name="gps_location">gps_location</string>


    <!-- Fragments Names -->
    <string name="fragment_user_list">User List</string>
    <string name="fragment_image_list">Image List</string>

    <!-- Other Strings -->
    <string name="action_create_chatroom">Create Chatroom</string>
    <string name="action_leave_chatroom">Leave chatroom</string>
    <string name="action_chatroom_user_list">User list</string>
    <string name="action_profile">Profile</string>



    <!--Facebook strings-->

    <string name="facebook_app_id">544101566102488</string>
    <string name="fb_login_protocol_scheme">fb544101566102488</string>

</resources>
